fix: remove z-index (#394)

--- a/packages/css/src/Form/FileUpload/Client/FileUpload.client.scss
+++ b/packages/css/src/Form/FileUpload/Client/FileUpload.client.scss
@@ -63,7 +63,6 @@
       }
 
       .af-btn-client {
-        z-index: 100;
         width: 50%;
       }
     }
